# konnektoren

./: .gitignore  1873cf1441551c40-initializer.mjs  34eef0ff3f466f23-initializer.mjs  CNAME  Cargo.toml  README.md  Trunk.toml  about-71695aec2a62240b.css  about-a3b04fde10e18d99.css  about-e3a5db314f83c482.css  b789a56de9e40d69-initializer.mjs  build.rs  config-5e8da043e02cc82.css  ed5c8007582d57-initializer.mjs  history-6ae7c55aa8cc1346.css  history-d3180c02ac7baeec.css  index-104855f6dd157e12.css  index-113ab13ac408da5.css  index-1420a395b92360ba.css  index-172658f3cbbb53a0.css  index-197411f00a20d8c.css  index-1e613afcb696cf92.css  index-229276394fa47ec0.css  index-24e410fe21b8c52e.css  index-28fa55a7dade1b30.css  index-2d9abf9e5612430f.css  index-34981e436854d87.css  index-3c348f611d7cf4c.css  index-4e552f3d305d4e9d.css  index-4f1946488ef0c7d3.css  index-58d07e8ac4e6d69e.css  index-6859012a9ecfbd00.css  index-6c9c88e6edf5774d.css  index-6d5f5e7141924954.css  index-77b43708e7dffa1d.css  index-7a78fd8e65ac65a4.css  index-7b48acb70246df6f.css  index-82a4ffa480b17556.css  index-9175726efbdf1ccd.css  index-9e6d073bc7927590.css  (+413 more)
.github/workflows/: gh-pages.yml
.well-known/: did.json
assets/: tour.yml
assets/i18n/: ar.json  cn.json  de.json  en.json  es.json  pl.json  tr.json  ua.json
scripts/: generate_sitemap.sh
snippets/konnektoren-20c46b89d48a90b5/: inline0.js
src/: adjectives.yml  app.rs  certificate.rs  konnektoren.yml  lib.rs  nomen.yml  openapi_spec.rs  prepositions.yml  route.rs  services.rs  utils.rs
src/assets/: initializer.mjs  tour.yml
src/assets/i18n/: ar.json  cn.json  de.json  en.json  es.json  pl.json  tr.json  ua.json
src/components/: carousel.rs  carousel_card.rs  certificate.rs  congratulations.rs  cursor.rs  explanation.rs  footer.rs  header.rs  history_entry.rs  konnektor_card.rs  konnektor_carousel.rs  logo.rs  main_menu.rs  mint_nft.rs  mod.rs  navigation.rs  player_input.rs  pro_version.rs  progress_bar.rs  select_language.rs  select_language_flag.rs  slide_show.rs  social_links.rs  sound_player.rs  telegram_link.rs  test_chart.rs  test_progress_bar.rs  test_results.rs  test_selector.rs  test_statistics.rs  tour.rs  translate.rs  type_selector.rs  verifiable_credential.rs  wallet.rs  zupass.rs
src/js/: cursor.js  index.js
src/model/: adjective_detail.rs  adjective_type.rs  adjectives.rs  answer_record.rs  categorized_items.rs  categorized_test.rs  category.rs  detail_trait.rs  history.rs  konnektor_category.rs  konnektor_detail.rs  konnektor_test.rs  konnektor_type.rs  konnektoren.rs  leaderboard.rs  mod.rs  nomen_detail.rs  nomen_type.rs  player.rs  preposition_category.rs  preposition_test.rs  preposition_type.rs  prepositions.rs  test_result.rs  test_type.rs  type_trait.rs  verb_detail.rs  verb_type.rs  vorgangspassiv_detail.rs  vorgangspassiv_type.rs
src/nft/: ipfs.rs  metadata.rs  mod.rs  underdog.rs
src/pages/: about.rs  adjectives.rs  config.rs  history.rs  home.rs  konnektoren.rs  language_page.rs  leaderboard.rs  mod.rs  nomen.rs  profile.rs  results.rs  survey.rs  verbs.rs
src/routes/: mod.rs
src/test_data/: adjectives.yml  verbs.yml  vorgangspassiv.yml
src/tui/: app.rs  mod.rs
src/tui/components/: mod.rs  tab.rs  type_buttons.rs
src/tui/pages/: about.rs  mod.rs
src/utils/: certificate_image.rs  mod.rs  translation.rs  verifiable_credential.rs
src/vc/: didcomm_invitation.rs  mod.rs
styles/: about.css  about.scss  config.scss  history.scss  index.css  index.scss  language.css  language.scss  leaderboard.scss  navigation.css  navigation.scss  profile.scss  results.css  results.scss  styles.scss
styles/abstracts/: _colors.scss  _index.scss  _type.scss  _variables.scss
styles/base/: _global.scss
styles/components/: _buttons.scss  _card.scss  _carousel.scss  _cursor.scss  _footer.scss  _header.scss  _index.scss  _navigation.scss  _pro_version.scss  _progressbar.scss  _select_language.scss  _slide_show.scss  _telegram_link.scss  _test_chart.scss  _test_results.scss  _test_statistics.scss  _type_selector.scss  _wallet.scss
styles/pages/: _config.scss  _history.scss  _index.scss  _leaderboard.scss  _profile.scss  _results.scss  _survey.scss
