[package]
name = "konnektoren"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-pwa"
path = "src/bin/main.rs"

[[bin]]
name = "konnektoren-openapi"
path = "src/bin/openapi.rs"
required-features = ["openapi"]

[[bin]]
name = "konnektoren-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[features]
default = ["web", "certificate-image"]
web = ["yew", "yew-router", "yew-bootstrap", "yew-hooks"]
openapi = ["utoipa"]
tui = ["crossterm", "ratatui"]
verifiable-credentials = ["uuid"]
certificate-image = ["image", "imageproc", "rusttype", "plot_icon"]

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
charts-rs = "0.3.4"
chrono = { version = "0.4.35", features = ["serde"] }
ed25519-dalek = { version = "2.1", default-features = false }
gloo-timers = "0.3"
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
rand = "0.8"
sha2 = "0.9"
qrcode = "0.13.0"
rusttype = { version = "0.9.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0"
serde_yaml = "0.8"
urlencoding = "2.1.3"
uuid = { version = "1.7", default-features = false, features = [
    "v4",
], optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.*", features = [
    "HtmlAudioElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Window",
] }
yew = { version = "0.21.0", features = ["csr"], optional = true }
yew-bootstrap = { version = "0.10.0", optional = true }
yew-router = { version = "0.18.0", optional = true }
yew-hooks = { version = "0.3.1", optional = true }
crossterm = { version = "0.27.0", optional = true }
ratatui = { version = "0.26.0", optional = true, features = ["all-widgets"] }
rmp-serde = "1.1.2"
strum = { version = "0.26", features = ["derive"] }
utoipa = { version = "4.2.0", optional = true }
hex = "0.4.3"
plot_icon = { version = "0.3.0", optional = true }
zeroize = "1.3"
yew-i18n = "0.1.2"
gloo-storage = "0.3.0"
