[package]
name = "konnektoren-worker-rust"
description = "Konnektoren Worker Rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "underdog-nft"
path = "src/bin/underdog_nft.rs"
required-features = ["underdog"]

[[bin]]
name = "deploy-nft"
path = "src/bin/deploy_nft.rs"
required-features = ["deploy-nft"]

[[bin]]
name = "issue-vc"
path = "src/bin/issue_vc.rs"
required-features = ["issue-vc"]

[features]
default = []
debug = ["worker_logger"]
deploy-nft = ["dotenv", "bip39", "solana-client", "solana-sdk", "mpl-core"]
underdog = ["bip39", "dotenv", "tokio", "solana-sdk"]
ipfs = ["reqwest/multipart"]
issue-vc = [
    "axum",
    "dotenv",
    "ngrok",
    "qrcode",
    "tokio",
    "tower-http",
    "tracing",
    "tracing-subscriber",
]

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7", features = ["tokio"], optional = true }
base64 = "0.22.0"
getrandom = { version = "0.2", features = ["js"] }
konnektoren = { git = "https://github.com/SofiiaVarich/konnektoren.git", default-features = false, features = [
    "certificate-image",
] }
image = { version = "0.24", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
worker = "0.0.21"

solana-client = { version = "1.17", optional = true }
solana-sdk = { version = "1.17", optional = true }
dotenv = { version = "0.15.0", optional = true }
bip39 = { version = "2.0", features = ["std"], optional = true }
mpl-core = { version = "0.3.0", optional = true }
ngrok = { version = "0.13.1", optional = true }
qrcode = { version = "0.14.0", optional = true }
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
], optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
log = "0.4.21"
worker_logger = { version = "0.2.0", optional = true }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
